# cpp_backtest

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat
.github/workflows/: ci.yml
include/: backtester.hpp  bar.hpp  context.hpp  data_source.hpp  order.hpp  report.hpp  simulator.hpp  strategy.hpp
reports/: all_symbols_summary.txt  equity_curve.csv  report.txt  session.json  trades.csv
src/: backtester.cpp  data_source.cpp  main.cpp  report.cpp  simulator.cpp
strategies/: ctm_strategy_simple.cpp  ctm_strategy_simple.hpp  example_sma_strategy.cpp  example_sma_strategy.hpp  one_point_oh_strategy.cpp  one_point_oh_strategy.hpp  orb_strategy.cpp  orb_strategy.hpp
tests/: test_runner.cpp
viewer/: viewer.html
